Added Radargun JVM options (commented)